prettier delete certification + smooth scrollbar locking on modal popups

--- a/app/templates/comms/wall/makesure-delete-medium.html
+++ b/app/templates/comms/wall/makesure-delete-medium.html
@@ -1,15 +1,15 @@
 <div class="modal is-active">
 	<div class="modal-background"></div>
-	<div class="modal-card-container">
-		<div class="modal-card noselect">
-				<section class="modal-card-body has-text-centered">
-				  <div class="title is-5 selectable">Delete this medium?</div>
-				  <div class="subtitle is-6 selectable">This action cannot be undone, and it will be removed from your profile, from the walls of all accounts, who follows you, and from the search results at Counekt.</div>
+	<div class="modal-card-container" style="max-width:340px;max-height:300px;">
+		<div class="modal-card noselect" style="max-width:340px;max-height:300px;">
+				<section class="modal-card-body has-text-centered" style="padding:32px;">
+				  <div class="title is-5 selectable">Want to delete this medium?</div>
+				  <div class="subtitle is-6 selectable" style="font-size:15px; text-align:left;padding-left: 8px;padding-right: 8px;">This action cannot be undone, it will be removed from your profile, the walls of all accounts, who follow you, and from the search results of Counekt.</div>
 				  <div id="buttons">
-				  	<button class="button is-danger is-normal is-rounded transition" id="delete">
+				  	<button class="button is-danger is-normal is-rounded transition" id="delete" style="width:100%; margin-bottom: 12px;">
 					    <span>Delete</span>
 					  </button>
-					  <button class="button is-light is-normal is-rounded transition" id="cancel">
+					  <button class="button is-light is-normal is-rounded transition close" style="width:100%;">
 					    <span>Cancel</span>
 					  </button>
 				 </div>
