--- a/app/templates/profiles/project/profile.html
+++ b/app/templates/profiles/project/profile.html
@@ -417,7 +417,7 @@ function changeToEdit() {
 
 function changeToProfile() {
   $("#modal-box").empty();
-  $(document.body).removeClass('noscroll');
+  unfreezeScroller();
 }
 
 function changeToPhoto() {
