--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -20,12 +20,17 @@ html {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .noscroll {
-	position: fixed;
     width: 100%;
     height: 100%;
 	overflow: hidden;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
+}
+
+.noscroll #page {
+	width: 100%;
+  height: 100%;
+	position: fixed;
 }
 
 
