--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,7 +20,7 @@
   </head>
   <body {% if noscroll %}class="noscroll"{% endif %}>
     <div id="loader"></div>
-  <div id="page" style="display: none;">
+  <div id="page" style="display:none;">
     {% if navbar %}
         {% include "navbar/navbar.html" %}
     {% elif exonavbar %}
@@ -84,8 +84,29 @@
             return `{% include 'comms/feedback/fb.html' %}`.replaceAll('\\id//', id).replaceAll('\\title//', title).replaceAll('\\content//', content).replaceAll('\\votes//',upvotes-downvotes).replaceAll('\\upvote_button_class//',upvote_button_class).replaceAll('\\upvote_button_active//',upvote_button_active).replaceAll('\\downvote_button_class//',downvote_button_class).replaceAll('\\downvote_button_active//',downvote_button_active).replaceAll('\\href//',href);
         }
 
+        function freezeScroller() {
+            var scrollPosition = window.pageYOffset;
+            console.log(scroll);
+            $('#page').css({'top': -scrollPosition + 'px'});
+            $(document.body).addClass('noscroll');
+            $(document.body).attr('prev-scroll',scrollPosition);
+        }
+
+        function unfreezeScroller() {
+            console.log("OISDO");
+            if ($(document.body).hasClass('noscroll')) {
+                console.log("does have class");
+                $(document.body).removeClass('noscroll');
+                $('html').scrollTop($(document.body).attr('prev-scroll'));
+                console.log($(document.body).attr('prev-scroll'));
+                $('#page').css({'top': 0});
+                $(document.body).removeAttr('prev-scroll');
+            }
+        }
+
         function makeSureDeleteMedium() {
             $("#modal-box").append(`{% include 'comms/wall/makesure-delete-medium.html' %}`);
+            freezeScroller();
         }
 
         function medium(id,title="",content="",creation_datetime="",author_dname="",author_username="",author_href="", profile_photo_src="", author_symbol="@", reply_count=0, quote_count=0, heart_count=0, is_hearted=false) {
@@ -126,7 +147,7 @@
             {% include "profiles/user/create-quote.html" %}
             {% endwith %}
             `.replaceAll('\\identity//', quote_identity).replaceAll('\\profile_photo//', quote_profile_pic).replaceAll('\\text-content//', quote_content).replaceAll('\\id//',quote_id));
-          $(document.body).addClass('noscroll');
+          freezeScroller();
     }
 
         function changeToCreateMedium() {
@@ -136,7 +157,7 @@
             {% endwith %}
             `);
           $('#title-create').focus();
-          $(document.body).addClass('noscroll');
+          freezeScroller();
         }
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
