--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -123,7 +123,30 @@
             return `{% include 'comms/wall/plain-medium.html' %}`.replaceAll('\\id//', id).replaceAll('\\title//', title).replaceAll('\\content//', content).replaceAll('\\author_dname//',author_dname).replaceAll('\\author_symbol//',author_symbol).replaceAll('\\author_username//',author_username).replaceAll('\\creation_datetime//',creation_datetime).replaceAll('\\author_href//',author_href).replaceAll('\\profile_photo_src//',profile_photo_src).replaceAll('\\reply_count//',reply_count).replaceAll('\\quote_count//',quote_count).replaceAll('\\heart_count//',heart_count).replaceAll('\\heart_class//',heart_class).replaceAll('\\heart_icon_type//',heart_icon_type);
         }
 
-        function mediumWithQuote(id,title,content,quote_id,quote_title,quote_content) {
+        function mediumQuote(id,title="",content="",creation_datetime="",author_dname="",author_username="",author_href="", profile_photo_src="", author_symbol="@", reply_count=0, quote_count=0, heart_count=0, is_hearted=false) {
+            if (is_hearted) {
+                var heart_class = "active";
+                var heart_icon_type = "fas";
+            }
+            else {
+                var heart_class = "";
+                var heart_icon_type = "far"
+            }
+            return `{% with is_quote=True %}{% include 'comms/wall/plain-medium.html' %}{% endwith %}`.replaceAll('\\id//', id).replaceAll('\\title//', title).replaceAll('\\content//', content).replaceAll('\\author_dname//',author_dname).replaceAll('\\author_symbol//',author_symbol).replaceAll('\\author_username//',author_username).replaceAll('\\creation_datetime//',creation_datetime).replaceAll('\\author_href//',author_href).replaceAll('\\profile_photo_src//',profile_photo_src).replaceAll('\\reply_count//',reply_count).replaceAll('\\quote_count//',quote_count).replaceAll('\\heart_count//',heart_count).replaceAll('\\heart_class//',heart_class).replaceAll('\\heart_icon_type//',heart_icon_type);
+        }
+
+        function mediumWithQuote(quote_html, id, title="",content="",creation_datetime="",author_dname="",author_username="",author_href="", profile_photo_src="", author_symbol="@", reply_count=0, quote_count=0, heart_count=0, is_hearted=false) {
+            if (is_hearted) {
+                var heart_class = "active";
+                var heart_icon_type = "fas";
+            }
+            else {
+                var heart_class = "";
+                var heart_icon_type = "far"
+            }
+            var the_content = `{% with is_template=True %}{% include 'comms/wall/medium-with-quote.html' %}{% endwith %}`;
+            console.log(the_content);
+            return the_content.replaceAll('\\id//', id).replaceAll('\\title//', title).replaceAll('\\content//', content).replaceAll('\\author_dname//',author_dname).replaceAll('\\author_symbol//',author_symbol).replaceAll('\\author_username//',author_username).replaceAll('\\creation_datetime//',creation_datetime).replaceAll('\\author_href//',author_href).replaceAll('\\profile_photo_src//',profile_photo_src).replaceAll('\\reply_count//',reply_count).replaceAll('\\quote_count//',quote_count).replaceAll('\\heart_count//',heart_count).replaceAll('\\heart_class//',heart_class).replaceAll('\\heart_icon_type//',heart_icon_type).replaceAll('\\quote_html//',{% with is_quote=True %}quote_html{% endwith %});
 
         }
 
@@ -143,7 +166,7 @@
         
             function changeToQuoteMedium(quote_identity, quote_profile_pic, quote_content, quote_id) {
           $("#modal-box").append(`
-            {% with is_template = True %}
+            {% with is_filler = True %}
             {% include "profiles/user/create-quote.html" %}
             {% endwith %}
             `.replaceAll('\\identity//', quote_identity).replaceAll('\\profile_photo//', quote_profile_pic).replaceAll('\\text-content//', quote_content).replaceAll('\\id//',quote_id));
