--- a/app/templates/comms/wall/makesure-delete-medium.html
+++ b/app/templates/comms/wall/makesure-delete-medium.html
@@ -1,7 +1,7 @@
 <div class="modal is-active">
 	<div class="modal-background"></div>
 	<div class="modal-card-container" style="max-width:340px;max-height:300px;">
-		<div class="modal-card noselect" style="max-width:340px;max-height:300px;">
+		<div class="modal-card noselect" style="margin: 0px;max-width:340px;max-height:300px;">
 				<section class="modal-card-body has-text-centered" style="padding:32px;">
 				  <div class="title is-5 selectable">Want to delete this medium?</div>
 				  <div class="subtitle is-6 selectable" style="font-size:15px; text-align:left;padding-left: 8px;padding-right: 8px;">This action cannot be undone, it will be removed from your profile, the walls of all accounts, who follow you, and from the search results of Counekt.</div>
