--- a/app/templates/comms/wall/medium-with-quote.html
+++ b/app/templates/comms/wall/medium-with-quote.html
@@ -1,8 +1,12 @@
 {% extends "comms/wall/plain-medium.html" %}
 {% block quote_html %}
-{% with medium=medium.quote, is_quote=True %}
 <div class="embedded clickable">
+{% if is_template %}
+\\quote_html//
+{% else %}
+{% with medium=medium.quote, is_quote=True %}
 {% include 'comms/wall/plain-medium.html' %}
-</div>
 {% endwith %}
+{% endif %}
+</div>
 {% endblock %}
