--- a/app/templates/profiles/user/create-quote.html
+++ b/app/templates/profiles/user/create-quote.html
@@ -1,3 +1,3 @@
-{% with card_title='Quote Reply' %}
+{% with card_title='Quote Reply', submit_button_id="submit-quote-button" %}
 {% include "profiles/user/create-quote-2.html" %}
 {% endwith %}
