--- a/app/templates/comms/wall/makesure-delete-medium.html
+++ b/app/templates/comms/wall/makesure-delete-medium.html
@@ -6,7 +6,7 @@
 				  <div class="title is-5 selectable">Want to delete this medium?</div>
 				  <div class="subtitle is-6 selectable" style="font-size:15px; text-align:left;padding-left: 8px;padding-right: 8px;">This action cannot be undone, it will be removed from your profile, the walls of all accounts, who follow you, and from the search results of Counekt.</div>
 				  <div id="buttons">
-				  	<button class="button is-danger is-normal is-rounded transition" id="delete" style="width:100%; margin-bottom: 12px;">
+				  	<button class="button is-danger is-normal is-rounded transition" id="delete-medium-button" style="width:100%; margin-bottom: 12px;" data-id="">
 					    <span>Delete</span>
 					  </button>
 					  <button class="button is-light is-normal is-rounded transition close" style="width:100%;">
