--- a/app/templates/comms/wall/medium.html
+++ b/app/templates/comms/wall/medium.html
@@ -1,5 +1,5 @@
   {% if medium %}
-    {% if medium.contains_quote %}
+    {% if medium.with_quote %}
           {% include 'comms/wall/medium-with-quote.html' %}
     {% elif medium.is_plain %}
         {% include 'comms/wall/plain-medium.html' %}
