--- a/app/templates/comms/create-bar.html
+++ b/app/templates/comms/create-bar.html
@@ -1,7 +1,7 @@
 <!-- Create bar -->
 <div style="display: flex; width:100%; margin-bottom: 10px;">
 		<figure class="image is-48x48" style="width:40px;height: 40px; float: left; margin-right: 5px;">
-				<img class="is-rounded" src="{{current_user.profile_photo.src}}">
+				<img class="current-user-photo is-rounded" src="{{current_user.profile_photo.src}}">
 			</figure>
 		<div class="field is-expanded has-addons" style="float:right; width: 100%;">
                   <p class="control has-icons-left" style="width: 100%;">
