--- a/app/templates/comms/wall/flex-stream.html
+++ b/app/templates/comms/wall/flex-stream.html
@@ -1,7 +1,9 @@
 <div style="margin-top: 5px;" class="wall">
 	{% if wall %}
 	{% for medium in media %}
-			{% include 'comms/wall/medium.html' %}
+			{% with by_current_user = medium.author == current_user %}
+				{% include 'comms/wall/medium.html' %}
+			{% endwith %}
 	{% endfor %}
 	{% endif %}
 </div>
