--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -139,19 +139,33 @@ margin-top: 200px;
 	background-size: 75%;
 }
 
+#flash-container {
+	width: 100%;
+	z-index: 100;
+  bottom: 40px;
+	position: fixed;	
+	
+}
+
 #flash {
 	opacity: 0;
-	position: absolute;
-	width: 100%;
-	height: 50px;
-	display: flex;
+	border-radius: 7.5px;
+	background-color: #3298dc; 
+	height: 40px;
+	line-height: 40px;
+	padding-left: 20px;
+	padding-right: 20px;
+	margin: auto;
+	display: 	table;
 	justify-content: center; /* align horizontal */
 	align-items: center; /* align vertical */
 }
 
 #flash p {
 	color: white;
-}
+	width: 	100%;
+	height: 40px;
+	}
 
 p.is-close {
 	margin-bottom: 7px !important;
