--- a/app/templates/comms/wall/medium-profile-photo.html
+++ b/app/templates/comms/wall/medium-profile-photo.html
@@ -1,9 +1,9 @@
 <figure class="image medium-profile-photo clickable">
         <a class="medium-image" {% if not without_link %}href="{% if medium %}{{medium.author.href}}{% else %}\\author_href//{% endif %}"{% endif %}>
         {% if through_channel %}
-        <img class="is-rounded medium-image-content" src="{% if medium %}{{medium.channel.profile_photo.src}}{% else  %}\\profile_photo_src//{% endif %}">
+        <img class="{% if by_current_user %}current-user-photo{% endif %} is-rounded medium-image-content" src="{% if medium %}{{medium.channel.profile_photo.src}}{% else  %}\\profile_photo_src//{% endif %}">
         {% else %}
-        <img class="is-rounded medium-image-content" src="{% if medium %}{{medium.author.profile_photo.src}}{% else  %}\\profile_photo_src//{% endif %}">
+        <img class="{% if by_current_user %}current-user-photo{% endif %} is-rounded medium-image-content" src="{% if medium %}{{medium.author.profile_photo.src}}{% else  %}\\profile_photo_src//{% endif %}">
         {% endif %}
         </a>
 </figure>
